replit flaskapp now is the answer code cont.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-.pythonlibs/
 *.pyc
+
+# run on replit.com ie run w/ peotry
+.pythonlibs/
+
+# run on nn laptop ie run w/ pipenv
+Pipfile.lock
+.venv/
